--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "filemanager-webpack-plugin": "^2.0.5",
+    "filemanager-plugin": "^2.3.3",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-axios": "0.0.4",
